2003-12-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-_initWin32Context) set a default
	cursor, which is used each time the window is entered.

2003-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m (-copyBits:fromRect:toPoint:): Made
	save against self and source being the same object and corrected
	computation for flipped views. This code is copied over from xlib.
	* Source/winlib/WIN32FontEnumerator.m Reimplemented the whole file.
	* Source/winlib/WIN32FontInfo.m (-setupAttributes) assign font
	family ivar and use common functions with font enumerator.
	* Source/win32/WIN32ServerEvent.m (WIN32Server
	-windowEventProc::::) flag that we handle erasing of the
	background ourselves. (invalidateWindow) copy from backing store
	if possible.

2003-12-03  Adam Fedor  <fedor@gnu.org>

	* Headers/win32/WIN32Server.h: Add ivars currentFocus, desiredFocus.
	* Source/win32/WIN32Server.m (setinputfocus:): Don't set if window
	already has focus
	* Source/win32/WIN32ServerEvent.m (-windowEventProc::::): Main
	event handler.
	(mainWindowProc): Call -windowEventProc::::.
	(-handleGotFocus:): Handle main/key directly without sending event
	to frontend.

2003-12-02  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m: Add a bunch of DebugLLog
	statements (WTrace, NSEvent, Focus).  Move event functions to...
	* Source/win32/WIN32ServerEvent.m: here.

2003-12-02 Leigh Smith   <leigh@bogus.example.com>

	* Source/winlib/WIN32GState.m ([WIN -_paintPath:drawType]):
	Corrected bug in Bezier curves, a bug in line widths and adds a
	workaround for a Windows GDI drawing bug when drawing curved wide
	lines.

2003-11-25 20:12  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (initialize_keyboard): Make sure that
	no _*_keycodes contains the same keycode twice.

2003-11-25 12:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m ([FTFontInfo_subpixel